<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <ImageView
        android:id="@+id/ivWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:src="@drawable/ic_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelAuthorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/font_helvetica_neue_bold"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivWelcome" />

    <ImageView
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_mail"
        app:layout_constraintEnd_toEndOf="@id/lineUser"
        app:layout_constraintBottom_toBottomOf="@+id/layoutUser"
        app:layout_constraintTop_toTopOf="@+id/layoutUser" />

    <ImageView
        android:id="@+id/icPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:clickable="true"
        android:src="@drawable/ic_key"
        app:layout_constraintEnd_toEndOf="@id/linePassword"
        app:layout_constraintBottom_toBottomOf="@+id/layoutPassword"
        app:layout_constraintTop_toTopOf="@+id/layoutPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutUser"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="42dp"
        android:background="@null"
        android:hint="@string/user"
        android:paddingLeft="-15dp"
        android:textAlignment="viewStart"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextAppearance="@style/TextLabel"
        app:hintTextColor="#5C5C5C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/labelAuthorization"
        app:layout_constraintTop_toBottomOf="@+id/labelAuthorization">

        <EditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingTop="30dp"
            android:textColor="#212121" />

    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:id="@+id/lineUser"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#EEEEEE"
        app:layout_constraintEnd_toEndOf="@id/layoutUser"
        app:layout_constraintStart_toStartOf="@id/layoutUser"
        app:layout_constraintTop_toBottomOf="@id/layoutUser" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="42dp"
        android:hint="@string/password"
        android:paddingLeft="-15dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextAppearance="@style/TextLabel"
        app:hintTextColor="#5C5C5C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/layoutUser"
        app:layout_constraintTop_toBottomOf="@+id/layoutUser">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            android:paddingTop="30dp"
            android:textAlignment="textStart"
            android:textColor="#212121" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/linePassword"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#EEEEEE"
        app:layout_constraintEnd_toEndOf="@id/layoutPassword"
        app:layout_constraintStart_toStartOf="@id/layoutPassword"
        app:layout_constraintTop_toBottomOf="@id/layoutPassword" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/bg_rounded_button_18"
        android:fontFamily="@font/font_helvetica_neue_bold"
        android:letterSpacing="0.01"
        android:lineHeight="20dp"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/linePassword" />

    <TextView
        android:background="@drawable/bg_rounded_button_8"
        android:fontFamily="@font/font_helvetica_neue_regular"
        android:textColor="#5C5C5C"
        android:textSize="12sp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="16dp"
        android:drawablePadding="5dp"
        android:text="@string/language"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        app:drawableStartCompat="@drawable/ic_georgia" />

    <TextView
        android:drawablePadding="5dp"
        android:textSize="12sp"
        android:textColor="#5C5C5C"
        android:gravity="center"
        android:fontFamily="@font/font_helvetica_neue_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/app_condition_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/ic_ini" />

</androidx.constraintlayout.widget.ConstraintLayout>